--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <nav>
          <ul>
             <li><a href="bigex.html">home</a></li>
-            <li><a href="">classes</a></li>
+            <li><a href="">classe</a></li>
             <li><a href="">catering</a></li>
             <li><a href="login.html">login</li>
             <li><a href="form.html">form</a></li>    
